--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
   <!-- Primary Meta Tags -->
   <title>Your Trusted Digital Growth Partner</title>
   <meta name="title" content="Your Trusted Digital Growth Partner">
-  <meta name="description" content="Our company is built on a passion for digital growth, creative strategy, and measurable results. We focus on delivering powerful marketing solutions that help businesses strengthen their online presence, connect with the right audience, and achieve long-term success. With a commitment to quality, innovation, and customer satisfaction, we work closely with every client to turn ideas into impactful digital experiences.">
+  <meta name="description" content="We help brands grow online with smart strategies, creative solutions, and trusted digital expertise focused on delivering measurable, long-term results.">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tamilselvang.netlify.app/about">
   <meta property="og:title" content="Your Trusted Digital Growth Partner">
-  <meta property="og:description" content="Our company is built on a passion for digital growth, creative strategy, and measurable results. We focus on delivering powerful marketing solutions that help businesses strengthen their online presence, connect with the right audience, and achieve long-term success. With a commitment to quality, innovation, and customer satisfaction, we work closely with every client to turn ideas into impactful digital experiences.">
+  <meta property="og:description" content="We help brands grow online with smart strategies, creative solutions, and trusted digital expertise focused on delivering measurable, long-term results.">
   <meta property="og:image" content="">
   
   <!-- Twitter -->
@@ -446,6 +446,7 @@
 
 
 </html>
+
 
 
 
