--- a/service.html
+++ b/service.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-	
-}
 </script>
 	<link rel="canonical" href="https://tamilselvang.netlify.app/service" />
     <meta charset="utf-8">
@@ -112,7 +110,7 @@
                                 <i class="fa fa-search fa-2x"></i>
                             </div>
                             <h5 class="mb-3">SEO Optimization</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">With over 10 years of experience, we use data-driven techniques and the latest SEO tools to ensure your business stays ahead of the competition.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -122,7 +120,7 @@
                                 <i class="fa fa-laptop-code fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Web Design</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we craft visually stunning, user-friendly websites that leave a lasting impression. Our web design focuses on responsive layouts, intuitive navigation, and brand-centric visuals to engage visitors and drive conversions.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -132,7 +130,7 @@
                                 <i class="fab fa-facebook-f fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Social Media Marketing</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we help businesses connect, engage, and grow on platforms like Facebook, Instagram, LinkedIn, and Twitter. Our data-driven strategies combine creative content, targeted ads, and community engagement to increase brand awareness and drive conversions.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -142,7 +140,7 @@
                                 <i class="fa fa-mail-bulk fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Email Marketing</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we design targeted email campaigns that engage your audience and drive measurable results. From personalized newsletters to promotional campaigns, we use segmentation, automation, and analytics to ensure every email hits the right inbox at the right time.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -152,7 +150,7 @@
                                 <i class="fa fa-thumbs-up fa-2x"></i>
                             </div>
                             <h5 class="mb-3">PPC Advertising</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0"m >we create targeted Pay-Per-Click (PPC) campaigns that drive immediate traffic and measurable ROI. From Google Ads to social media advertising, our experts optimize every campaign for clicks, conversions, and cost-efficiency.we create targeted Pay-Per-Click (PPC) campaigns that drive immediate traffic and measurable ROI. From Google Ads to social media advertising, our experts optimize every campaign for clicks, conversions, and cost-efficiency.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -162,7 +160,7 @@
                                 <i class="fab fa-android fa-2x"></i>
                             </div>
                             <h5 class="mb-3">App Development</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</p>
+                            <p class="m-0">we design and develop custom mobile applications for iOS and Android that are fast, secure, and user-friendly. From concept to deployment, our team ensures your app delivers exceptional performance, seamless UX, and scalable solutions.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -179,7 +177,7 @@
                     <div class="col-lg-7 text-center">
                         <p class="section-title text-white justify-content-center"><span></span>Newsletter<span></span></p>
                         <h1 class="text-center text-white mb-4">Stay Always In Touch</h1>
-                        <p class="text-white mb-4">Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit sed stet lorem sit clita duo justo</p>
+                        <p class="text-white mb-4">keeping your brand alive in their minds. Every message you send strengthens trust, connection, and long-term loyalty.</p>
                         <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Enter Your Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
@@ -198,32 +196,32 @@
                 <h1 class="text-center mb-5">What Say Our Clients!</h1>
                 <div class="owl-carousel testimonial-carousel">
                     <div class="testimonial-item bg-light rounded my-4">
-                        <p class="fs-5"><i class="fa fa-quote-left fa-4x text-primary mt-n4 me-3"></i>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit sed stet lorem sit clita duo justo.</p>
+                        <p class="fs-5"><i class="fa fa-quote-left fa-4x text-primary mt-n4 me-3"></i>“Excellent service! Their digital strategies helped our brand grow faster than expected. Highly recommended.”</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" style="width: 65px; height: 65px;">
                             <div class="ps-4">
-                                <h5 class="mb-1">Client Name</h5>
-                                <span>Profession</span>
+                                <h5 class="mb-1">Sophia Martinez</h5>
+                                <span>Fashion Blogger</span>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded my-4">
-                        <p class="fs-5"><i class="fa fa-quote-left fa-4x text-primary mt-n4 me-3"></i>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit sed stet lorem sit clita duo justo.</p>
+                        <p class="fs-5"><i class="fa fa-quote-left fa-4x text-primary mt-n4 me-3"></i>“Professional team, timely delivery, and great results. Our online visibility improved noticeably.”</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg" style="width: 65px; height: 65px;">
                             <div class="ps-4">
-                                <h5 class="mb-1">Client Name</h5>
-                                <span>Profession</span>
+                                <h5 class="mb-1">Emma Robinson</h5>
+                                <span>Entrepreneur</span>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded my-4">
-                        <p class="fs-5"><i class="fa fa-quote-left fa-4x text-primary mt-n4 me-3"></i>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit sed stet lorem sit clita duo justo.</p>
+                        <p class="fs-5"><i class="fa fa-quote-left fa-4x text-primary mt-n4 me-3"></i>“Great experience! Transparent, supportive, and truly committed to delivering results.”</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" style="width: 65px; height: 65px;">
                             <div class="ps-4">
-                                <h5 class="mb-1">Client Name</h5>
-                                <span>Profession</span>
+                                <h5 class="mb-1">Olivia Carter</h5>
+                                <span>Event Coordinator</span>
                             </div>
                         </div>
                     </div>
@@ -239,9 +237,9 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
                         <p class="section-title text-white h5 mb-4">Address<span></span></p>
-                        <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <p><i class="fa fa-map-marker-alt me-3"></i>chennai</p>
+                        <p><i class="fa fa-phone-alt me-3"></i>+91 7449136784</p>
+                        <p><i class="fa fa-envelope me-3"></i>tamizhguvera@gmail.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -282,7 +280,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <p class="section-title text-white h5 mb-4">Newsletter<span></span></p>
-                        <p>Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulpu</p>
+                        <p>Stay updated with the latest digital marketing trends, tips, and strategies to grow your brand online. Get expert insights, service updates, and exclusive offers delivered straight to your inbox.</p>
                         <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Your Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
@@ -335,5 +333,6 @@
 
 
 </html>
+
 
 
