--- a/service.html
+++ b/service.html
@@ -2,6 +2,33 @@
 <html lang="en">
 
 <head>
+	
+  <!-- Primary Meta Tags -->
+  <title>Expert Digital Solutions</title>
+  <meta name="title" content="Expert Digital Solutions">
+  <meta name="description" content="We deliver high-quality digital solutions designed to boost your brand, enhance visibility, and drive measurable growth with reliable, expert service.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tamilselvang.netlify.app/service">
+  <meta property="og:title" content="Expert Digital Solutions">
+  <meta property="og:description" content="We deliver high-quality digital solutions designed to boost your brand, enhance visibility, and drive measurable growth with reliable, expert service.">
+  <meta property="og:image" content="">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://tamilselvang.netlify.app/service">
+  <meta property="twitter:title" content="Expert Digital Solutions">
+  <meta property="twitter:description" content="We deliver high-quality digital solutions designed to boost your brand, enhance visibility, and drive measurable growth with reliable, expert service.">
+  <meta property="twitter:image" content="">
+  
+  <!-- Optional Meta Tags -->
+  <meta name="keywords" content="Top digital marketing agency">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="language" content="ENGLISH">
+  <meta name="revisit-after" content="1 day days">
+  <meta name="author" content="Tamilselvan">
 </script>
 	<link rel="canonical" href="https://tamilselvang.netlify.app/service" />
     <meta charset="utf-8">
@@ -333,6 +360,7 @@
 
 
 </html>
+
 
 
 
