--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
 <head>
 	
   <!-- Primary Meta Tags -->
-  <title>Expert Digital Solutions</title>
+  <title>Expert Solutions Designed to Elevate Your Brand Online</title>
   <meta name="title" content="Expert Digital Solutions">
   <meta name="description" content="We deliver high-quality digital solutions designed to boost your brand, enhance visibility, and drive measurable growth with reliable, expert service.">
   
@@ -360,6 +360,7 @@
 
 
 </html>
+
 
 
 
