--- a/project.html
+++ b/project.html
@@ -174,8 +174,7 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Digital Agency Website Design And Development</a>
+                                <h5 class="lh-base mb-0">KEYWORD RESEARCH</a>
                             </div>
                         </div>
                     </div>
@@ -189,8 +188,7 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Digital Agency Website Design And Development</a>
+                                <h5 class="lh-base mb-0">SMM</a>
                             </div>
                         </div>
                     </div>
@@ -204,8 +202,7 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Digital Agency Website Design And Development</a>
+                                <h5 class="lh-base mb-0">WEBSITE DESIGN</a>
                             </div>
                         </div>
                     </div>
@@ -219,8 +216,7 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Digital Agency Website Design And Development</a>
+                                <h5 class="lh-base mb-0">SEO</a>
                             </div>
                         </div>
                     </div>
@@ -234,8 +230,7 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Digital Agency Website Design And Development</a>
+                                <h5 class="lh-base mb-0">E-MAIL MARKETING</a>
                             </div>
                         </div>
                     </div>
@@ -249,8 +244,7 @@
                                 </div>
                             </div>
                             <div class="bg-light p-4">
-                                <p class="text-primary fw-medium mb-2">UI / UX Design</p>
-                                <h5 class="lh-base mb-0">Digital Agency Website Design And Development</a>
+                                <h5 class="lh-base mb-0">CONTENT MARKETING</a>
                             </div>
                         </div>
                     </div>
@@ -266,9 +260,9 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
                         <p class="section-title text-white h5 mb-4">Address<span></span></p>
-                        <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <p><i class="fa fa-map-marker-alt me-3"></i>Chennai</p>
+                        <p><i class="fa fa-phone-alt me-3"></i>+91 7449136784</p>
+                        <p><i class="fa fa-envelope me-3"></i>tamizhguvera@gamil.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -362,6 +356,7 @@
 
 
 </html>
+
 
 
 
