--- a/project.html
+++ b/project.html
@@ -2,6 +2,33 @@
 <html lang="en">
 
 <head>
+	
+  <!-- Primary Meta Tags -->
+  <title>High-Quality Services Tailored for Your Success</title>
+  <meta name="title" content="High-Quality Services Tailored for Your Success">
+  <meta name="description" content="Showcasing our successful projects that highlight creativity, strategy, and measurable results, proving our commitment to quality and client satisfaction.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tamilselvang.netlify.app/project">
+  <meta property="og:title" content="High-Quality Services Tailored for Your Success">
+  <meta property="og:description" content="Showcasing our successful projects that highlight creativity, strategy, and measurable results, proving our commitment to quality and client satisfaction.">
+  <meta property="og:image" content="https://tamilselvang.netlify.app/img/portfolio-2.jpg">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://tamilselvang.netlify.app/project">
+  <meta property="twitter:title" content="High-Quality Services Tailored for Your Success">
+  <meta property="twitter:description" content="Showcasing our successful projects that highlight creativity, strategy, and measurable results, proving our commitment to quality and client satisfaction.">
+  <meta property="twitter:image" content="https://tamilselvang.netlify.app/img/portfolio-2.jpg">
+  
+  <!-- Optional Meta Tags -->
+  <meta name="keywords" content="Advertising agency in Chennai">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="language" content="ENGLISH">
+  <meta name="revisit-after" content="1 day days">
+  <meta name="author" content="Tamilselvan">
 	<script type="application/ld+json">
 {
   "@context": "https://schema.org/",
@@ -303,7 +330,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <p class="section-title text-white h5 mb-4">Newsletter<span></span></p>
-                        <p>Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulpu</p>
+                        <p>Stay updated with the latest digital marketing trends, tips, and strategies to grow your brand online. Get expert insights, service updates, and exclusive offers delivered straight to your inbox.</p>
                         <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Your Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
@@ -356,6 +383,7 @@
 
 
 </html>
+
 
 
 
