--- a/team.html
+++ b/team.html
@@ -2,6 +2,33 @@
 <html lang="en">
 
 <head>
+	
+  <!-- Primary Meta Tags -->
+  <title>Smart Digital Solutions for Modern Business Growth</title>
+  <meta name="title" content="Smart Digital Solutions for Modern Business Growth">
+  <meta name="description" content="Our team is a group of skilled, creative, and dedicated professionals working together to deliver the best results and drive your brand’s success.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tamilselvang.netlify.app/team">
+  <meta property="og:title" content="Smart Digital Solutions for Modern Business Growth">
+  <meta property="og:description" content="Our team is a group of skilled, creative, and dedicated professionals working together to deliver the best results and drive your brand’s success.">
+  <meta property="og:image" content="https://tamilselvang.netlify.app/img/team-2.jpg">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://tamilselvang.netlify.app/team">
+  <meta property="twitter:title" content="Smart Digital Solutions for Modern Business Growth">
+  <meta property="twitter:description" content="Our team is a group of skilled, creative, and dedicated professionals working together to deliver the best results and drive your brand’s success.">
+  <meta property="twitter:image" content="https://tamilselvang.netlify.app/img/team-2.jpg">
+  
+  <!-- Optional Meta Tags -->
+  <meta name="keywords" content="professional SEO company">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="language" content="ENGLISH">
+  <meta name="revisit-after" content=" days">
+  <meta name="author" content="">
 	<link rel="canonical" href="https://tamilselvang.netlify.app/team" />
     <meta charset="utf-8">
     <title>DGital - Digital Agency HTML Template</title>
@@ -248,7 +275,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <p class="section-title text-white h5 mb-4">Newsletter<span></span></p>
-                        <p>Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulpu</p>
+                        <p>Stay updated with the latest digital marketing trends, tips, and strategies to grow your brand online. Get expert insights, service updates, and exclusive offers delivered straight to your inbox.</p>
                         <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Your Email" style="height: 48px;">
                             <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
@@ -301,3 +328,4 @@
 
 
 </html>
+
