--- a/testimonial.html
+++ b/testimonial.html
@@ -2,6 +2,33 @@
 <html lang="en">
 
 <head>
+	
+  <!-- Primary Meta Tags -->
+  <title>Smart Digital Solutions for Modern Business Growth</title>
+  <meta name="title" content="Smart Digital Solutions for Modern Business Growth">
+  <meta name="description" content="Discover what our clients say about their experience with us—real stories of trust, satisfaction, and results that reflect our commitment to quality.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tamilselvang.netlify.app/testimonial">
+  <meta property="og:title" content="Smart Digital Solutions for Modern Business Growth">
+  <meta property="og:description" content="Discover what our clients say about their experience with us—real stories of trust, satisfaction, and results that reflect our commitment to quality.">
+  <meta property="og:image" content="">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://tamilselvang.netlify.app/testimonial">
+  <meta property="twitter:title" content="Smart Digital Solutions for Modern Business Growth">
+  <meta property="twitter:description" content="Discover what our clients say about their experience with us—real stories of trust, satisfaction, and results that reflect our commitment to quality.">
+  <meta property="twitter:image" content="">
+  
+  <!-- Optional Meta Tags -->
+  <meta name="keywords" content="trusted client testimonials">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="language" content="ENGLISH">
+  <meta name="revisit-after" content="1 day days">
+  <meta name="author" content="Tamilselvan">
 	<link rel="canonical" href="https://tamilselvang.netlify.app/testimonial" />
     <meta charset="utf-8">
     <title>DGital - Digital Agency HTML Template</title>
@@ -239,3 +266,4 @@
 
 
 </html>
+
