--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+	<link rel="alternate" hreflang="x-default" href="https://tamilselvang.netlify.app/"/>
+
 	<script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -707,6 +709,7 @@
 
 
 </html>
+
 
 
 
