--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RWSTV63CZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3RWSTV63CZ');
+</script>
 	<link rel="alternate" hreflang="x-default" href="https://tamilselvang.netlify.app/"/>
 
 	<script type="text/javascript">
@@ -709,6 +718,7 @@
 
 
 </html>
+
 
 
 
