--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
 	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3FF9KQNGXH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3FF9KQNGXH');
+
+	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RWSTV63CZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -718,6 +727,7 @@
 
 
 </html>
+
 
 
 
